--- a/templates/reports.html
+++ b/templates/reports.html
@@ -39,11 +39,16 @@
 			on-refresh="doRefresh()">
 		  </ion-refresher>	
  
-      <ion-list show-delete="data.showDelete" show-reorder="data.showReorder">
-		<br>
+ 		<br>
 		<div>Slide each report to the left for more options</div>
 		<div>If a new report doesn't appear pull to refresh the view</div>
 		<br>
+ 
+      <ion-list show-delete="data.showDelete" show-reorder="data.showReorder">
+		<!--br>
+		<div>Slide each report to the left for more options</div>
+		<div>If a new report doesn't appear pull to refresh the view</div>
+		<br-->
         <ion-item ng-repeat="item in items track by $index" 
                   item="item", idx = $index
                   ng-href="#" ng-click="openReport(item.file)" class="item-remove-animate">
