--- a/templates/report/facet.html
+++ b/templates/report/facet.html
@@ -77,7 +77,7 @@
 					</p>
 					<br>
 				
-					<div class="percent-bar-and-score">
+					<div class="percent-bar-and-score" ng-show="traits.score">
 						<div class="percent-bar-and-score--label output-big-5--trait-label output-big-5--trait-label_POSITIVE">
 							{{traits.traitName | translate}}
 							<i class="icon icon-down-arrow percent-bar-and-score--toggle-icon"></i>
