--- a/templates/test.html
+++ b/templates/test.html
@@ -1,45 +1,48 @@
 <ion-view view-title="Test" cache-view="true">
 
 	<ion-content padding="true" class="has-header" delegate-handle="report4" on-scroll="reportScroll()" overflow-scroll="false"  scroll="yes"> <!-- has-tabs='true' --> 
-	<div>		
-	<h4> test local storage </h4>
-	<label class="item item-input">
-		<span class="input-label" >text to store</span>
-		<input type="text" ng-model="content" palceholder="placeholder?">
-	</label>
-	<button ng-click="store(content)">store</button>
-	<br>value of content: {{content}}
-	<br><br>
 	
-	<button ng-click="retrieve()">retrieve</button>
-	<label>
-		<span> content from store: </span>
-		{{retrievedContent}}
-	</label>	
-	</div>
+	<details>
+		<summary>store test</summary>
+		<div>	
+		<h4> test local storage </h4>
+		<label class="item item-input">
+			<span class="input-label" >text to store</span>
+			<input type="text" ng-model="content" palceholder="placeholder?">
+		</label>
+		<button ng-click="store(content)">store</button>
+		<br>value of content: {{content}}
+		<br><br>
+		
+		<button ng-click="retrieve()">retrieve</button>
+		<label>
+			<span> content from store: </span>
+			{{retrievedContent}}
+		</label>	
+		</div>
+	</details>
 	
-	<br><br>
-	<div>
-	<h4> test post msg </h4>
-	<button ng-click="newWindow()"> open popup</button>
-	</div>
+	<br>
 	
-	<br><br>
-	<div>
-	<h4>load report</h4>
-	<button ng-click="loadReport()"> load report</button>
-	</div>	
-	
-	<br><br>
-	<div>
-	<h4>load reports</h4>
-	<label class="item item-input">
-		<span class="input-label" >New File Prefix</span>
-		<input type="text" ng-model="prefix" palceholder="prefix">
-	</label>	
-	<button ng-click="loadReports(prefix)"> load reports</button>
-	</div>
+	<details>
 
+		<summary>report test</summary>
+		<br><br>
+		<div>
+		<h4>load report</h4>
+		<button ng-click="loadReport()"> load report</button>
+		</div>	
+		
+		<br><br>
+		<div>
+		<h4>load reports</h4>
+		<label class="item item-input">
+			<span class="input-label" >New File Prefix</span>
+			<input type="text" ng-model="prefix" palceholder="prefix">
+		</label>	
+		<button ng-click="loadReports(prefix)"> load reports</button>
+		</div>
+	</details>
 	
 	<br><br>
 	<div>
@@ -47,32 +50,44 @@
 	<button ng-click ="getpi('','',null)"> get PI</button>
 	</div>
 	
-	<br><br>
-	<div>
-	<h4> popup window</h4>
-	<button ng-click = "popupWin()"> open window </button>
-	</div>
-	
-	<br><br>
-	<div>
-	<h4> inapp browser, _blank</h4>
-	<button ng-click = "popupIAB()"> open InAppBrowser </button>
-	</div>
-	
-	<div>value from popup: {{test}}</div>
+	<details>
+		<summary>iap & window popup</summary>
+		
+		<br><br>
+		<div>
+		<h4> test post msg </h4>
+		<button ng-click="newWindow()"> open popup</button>
+		</div>
 
-	<br><br>
-	<div>
-	<h4> inapp browser, _self</h4>
-	<button ng-click = "popupIAB2()"> open InAppBrowser </button>
-	</div>
+		<br><br>
+		<div>
+		<h4> popup window</h4>
+		<button ng-click = "popupWin()"> open window </button>
+		</div>
+		
+		<br><br>
+		<div>
+		<h4> inapp browser, _blank</h4>
+		<button ng-click = "popupIAB()"> open InAppBrowser </button>
+		</div>
+		
+		<div>value from popup: {{test}}</div>
 
-	<br><br>
-	<div>
-	<h4> inapp browser, _system</h4>
-	<button ng-click = "popupIAB3()"> open InAppBrowser </button>
-	</div>	
+		<br><br>
+		<div>
+		<h4> inapp browser, _self</h4>
+		<button ng-click = "popupIAB2()"> open InAppBrowser </button>
+		</div>
+
+		<br><br>
+		<div>
+		<h4> inapp browser, _system</h4>
+		<button ng-click = "popupIAB3()"> open InAppBrowser </button>
+		</div>	
+	</details>
 	
+	
+	<!--
 	<div>
 	<h4> state go</h4>
 	<button ng-click = "changeState()"> go to state </button>
@@ -103,22 +118,26 @@
 	<button ng-click = "createReport(name, source)"> create </button>
 	<button ng-click = "showReports()"> show reports </button>
 	</div>	
+	-->
 	
-	<div>
-	<h4>share</h4>
-	<button ng-click = "share('yammer')"> share </button>
-	</div>	
+	<br>
+	<details>
+		<summary> social tests</summary>
+		<div>
+		<h4>share</h4>
+		<button ng-click = "share('yammer')"> share </button>
+		</div>	
 
-	<div>
-	<h4>getFriends & getProfile</h4>
-	<button ng-click = "getFriends('facebook')"> getFriends & profile </button>
-	</div>		
+		<div>
+		<h4>getFriends & getProfile</h4>
+		<button ng-click = "getFriends('facebook')"> getFriends & profile </button>
+		</div>		
 
-	<div>
-	<h4>getPosts</h4>
-	<button ng-click = "getPosts('facebook')"> getPosts </button>
-	</div>	
-	
+		<div>
+		<h4>getPosts</h4>
+		<button ng-click = "getPosts('facebook')"> getPosts </button>
+		</div>	
+	</details>
 	
 	<div>
 	<h4>getDeviceInfo</h4>
@@ -140,33 +159,34 @@
 	<button ng-click = "importReport('Edwin Pun_yammer')"> Import test </button>
 	</div>
 	
-	
-	<div>
-		<h4>static payment response</h4>
-		<button ng-click = "testpay()"> Payment test </button>
-	</div>
-	
-	<div>
-		<h4>dynamic test payment response</h4>
-		<button ng-click = "testpayDynamic()"> Dynamic Payment test </button>
-	</div>	
-	
-	<div>
-		<h4>dynamic test payment verify</h4>
-		<button ng-click = "testpayVerify()"> Payment & verify test </button>
-	</div>		
+	<details>
+		<summary>payment tests</summary>
+		<div>
+			<h4>static payment response</h4>
+			<button ng-click = "testpay()"> Payment test </button>
+		</div>
+		
+		<div>
+			<h4>dynamic test payment response</h4>
+			<button ng-click = "testpayDynamic()"> Dynamic Payment test </button>
+		</div>	
+		
+		<div>
+			<h4>dynamic test payment verify</h4>
+			<button ng-click = "testpayVerify()"> Payment & verify test </button>
+		</div>		
 
-	<div>
-		<h4>dynamic test consume</h4>
-		<button ng-click = "testConsume()"> Comsume test </button>
-	</div>
-	
-	
-	<div>
-		<h4>static test consume</h4>
-		<button ng-click = "testConsumeStatic()"> Comsume test </button>
-	</div>
-
+		<div>
+			<h4>dynamic test consume</h4>
+			<button ng-click = "testConsume()"> Comsume test </button>
+		</div>
+		
+		
+		<div>
+			<h4>static test consume</h4>
+			<button ng-click = "testConsumeStatic()"> Comsume test </button>
+		</div>
+	</details>
 	
 	<div>
 		<h4> app invite test </h4>
@@ -174,7 +194,22 @@
 	</div>
 	
 	<br><br>
+	
+	
+	<details>
+		<summary>profile v3 test</summary>
+		<div>
+			<h4>transform profile test (v3)</h4>
+			<button ng-click = "transform()"> transform </button>
+		</div>
 		
+		<div>
+			<h4> open v3 report</h4>
+			<button ng-click = "openV3()">open report</button>
+		</div>
+	</details>
+	
+	<br><br>
 	</ion-content>
 
 </ion-view>
