sync old last changes (reports v2 +  some template changes)

--- a/templates/account/settings.html
+++ b/templates/account/settings.html
@@ -1,6 +1,6 @@
-<ion-view view-title="Free Credits">
-  <ion-content overflow-scroll="false">
-    <h5>Get Free Credits</h5>
+<ion-view view-title="Settings">
+	<ion-content overflow-scroll="false">
+		<h5>Settings</h5>
 	<!-- <div>{{relationship}}</div> -->
-  </ion-content>
+	</ion-content>
 </ion-view>
