--- a/templates/credits/free.html
+++ b/templates/credits/free.html
@@ -4,7 +4,7 @@
 	<!-- <div>{{relationship}}</div> -->
 	<div>
 	<h4> Free Credit</h4>
-	<button class="button button-block button-stable" type="submit" ng-click = "acquire()"> get free credit </button>
+	<button class="button button-block button-stable" type="submit" ng-click = "acquire()"> G Free Credit </button>
 	</div>	
 	
   </ion-content>
