--- a/templates/credits/prom.html
+++ b/templates/credits/prom.html
@@ -23,7 +23,7 @@
                     <u>more info</u>
                 </details>
 				
-				<button class="button button-block button-stable" type="submit" ng-click="acquire(social.place)">get promotional credits</button>
+				<button class="button button-block button-stable" type="submit" ng-click="acquire(social.place)">Get Promotion Credit</button>
 				
             </div>				
   </ion-content>
