--- a/templates/info/en/index.html
+++ b/templates/info/en/index.html
@@ -1,7 +1,7 @@
-<ion-view view-title="Account">
+<ion-view view-title="Information">
 	<ion-content overflow-scroll="false" >
-    <!--h5>Credits</h5-->
-	<!--div ui-view></div-->
+		<!--h5>Information</h5-->
+		<!--div ui-view></div-->
 		<ion-nav-view/>
 		<br>
 	</ion-content>
