--- a/templates/credits/paid.html
+++ b/templates/credits/paid.html
@@ -4,8 +4,9 @@
 
 	<div>
 	<h4> Purchase credits </h4>
-	<button class="button button-block button-stable" type="submit" ng-click = "purchase(5)"> purchase credits </button>
+	<button class="button button-block button-stable" type="submit" ng-click = "purchase(5)"> Purchase Credits </button>
 	</div>		
-	
+	<br>
+	<p>Note: report generating using a paid credit is Interstitial AD free, check Info/Credits from menu for more information.</p>
   </ion-content>
 </ion-view>
