--- a/templates/menu.html
+++ b/templates/menu.html
@@ -27,30 +27,25 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Personality Analysis</h1>
+      <h1 class="title">Personality Insights</h1>
     </ion-header-bar>
     <ion-content>
 	
 	
-		<ion-item menu-close href="#/app/about">
-	      About 
+		<!--ion-item menu-close href="#/app/about">
+			About 
         </ion-item>        
 		
 		<ion-item menu-close href="#/app/format">
-          manual format
-        </ion-item>
+			manual format
+        </ion-item-->
 		
 		<ion-item menu-close href="#/app/analyze">
-          Analyze
+			Analyze
         </ion-item>		
-
-
-		<ion-item menu-close href="#/app/traits/">
-			Traits
-        </ion-item>
 		
 		<ion-item menu-close href="#/app/reports">
-			Open Report
+			Open Reports
         </ion-item>
 		
 		
@@ -58,25 +53,23 @@
 			Test
         </ion-item>		
 
-		<ion-item menu-close href="#/app/playlists">
+		<!--ion-item menu-close href="#/app/playlists">
 			Playlists
-        </ion-item>
+        </ion-item-->
 		
 		 <div ng-repeat="group in groups">
-          <!-- ion-item class="item-stable" -->
-		  <ion-item		  
-					ng-click="toggleGroup(group)"
-                    ng-class="{active: isGroupShown(group)}">
-              <i class="icon" ng-class="isGroupShown(group) ? 'ion-minus' : 'ion-plus'"></i>
-            &nbsp;
-            {{group.name}}
-          </ion-item>
-          <ion-item menu-close href="#/app/{{group.href}}/{{item.href}}"
-					class="item-accordion"
-                    ng-repeat="item in group.items"
-                    ng-show="isGroupShown(group)">
-            &nbsp; &nbsp;{{item.subName}}
-          </ion-item>
+			<!-- ion-item class="item-stable" -->
+			<ion-item ng-click="toggleGroup(group)" ng-class="{active: isGroupShown(group)}">
+					<i class="icon" ng-class="isGroupShown(group) ? 'ion-minus' : 'ion-plus'"></i>
+					&nbsp;{{group.name}}
+			</ion-item>
+			  
+			<ion-item menu-close href="#/app/{{group.href}}/{{item.href}}"
+						class="item-accordion"
+						ng-repeat="item in group.items"
+						ng-show="isGroupShown(group)">
+				&nbsp; &nbsp; &nbsp; {{item.subName}}
+			</ion-item>
         </div>
 		
 		
